--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -3,7 +3,9 @@
     <form [formGroup]="credentialsForm" (ngSubmit)="onSubmit()">
       <ion-row>
         <ion-col>
-          <ion-item lines="none"><img src="assets/logo/smart-songs-logo.jpg" /></ion-item>
+          <ion-item lines="none"
+            ><img src="assets/logo/smart-songs-logo.jpg"
+          /></ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
@@ -21,7 +23,7 @@
             <ion-input type="password" formControlName="password"></ion-input>
           </ion-item>
         </ion-col>
-      </ion-row>     
+      </ion-row>
       <ion-row>
         <ion-col>
           <ion-button expand="block" type="submit">Login</ion-button>
@@ -29,7 +31,9 @@
       </ion-row>
       <ion-row>
         <ion-col class="ion-text-center">
-          <ion-text>Not a member? <span routerLink="/signup">Sign Up</span></ion-text>
+          <ion-text
+            >Not a member? <span routerLink="/signup">Sign Up</span></ion-text
+          >
         </ion-col>
       </ion-row>
       <!--
@@ -41,6 +45,6 @@
       </ion-row>
       -->
       <ion-row></ion-row>
-    </form> 
+    </form>
   </ion-grid>
 </ion-content>
