--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="end">
       <ion-button (click)="showProfilePopover($event)">
         <ion-icon name="more"></ion-icon>
