fixed ui details in text area and songs tab

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -62,6 +62,7 @@
             <ion-item>
               <ion-label position="stacked">Profile Summary</ion-label>
               <ion-textarea
+                rows="8"
                 placeholder="Enter short bio..."
                 [(ngModel)]="user.summary"
               ></ion-textarea>
