--- a/src/app/songs/songs.page.html
+++ b/src/app/songs/songs.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-searchbar animated></ion-searchbar>
 
-  <ion-list-header class="ion-text-center">
+  <ion-list-header class="ion-text-center ion-padding-bottom">
     <ion-segment
       [(ngModel)]="projectsSegment"
       (ionChange)="segmentChanged(projectsSegment)"
