--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -116,7 +116,12 @@
 
       <ion-item class="form-box">
         <ion-label>Description</ion-label>
-        <ion-textarea type="text" #description name="description" required></ion-textarea>
+        <ion-textarea
+          type="text"
+          #description
+          name="description"
+          required
+        ></ion-textarea>
       </ion-item>
 
       <ion-button type="submit" color="success" expand="block"
