added back button to the create song page, added button in the songs tab to create page, added alerts in the create page to handle user input in the is_original and sole_composer fields

--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Create a Song</ion-title>
+    <ion-buttons slot="end">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -9,6 +12,7 @@
     #f="ngForm"
     (ngSubmit)="onSubmit(is_original, sole_creator, creative_status, song_title, artist_name, genres, instruments, moods, bpm, lyrics, description)"
   >
+    <!-- IS ORIGINAL? -->
     <ion-list>
       <ion-radio-group
         name="is_original"
