--- a/src/app/songs/songs.page.html
+++ b/src/app/songs/songs.page.html
@@ -56,4 +56,9 @@
       </ion-item>
     </ion-list>
   </div>
+  <div class="create-song-button-container">
+    <ion-button color="danger" class="ion-margin-top" routerLink="/create"
+      >Create New Song</ion-button
+    >
+  </div>
 </ion-content>
