--- a/src/app/create/create.page.scss
+++ b/src/app/create/create.page.scss
@@ -8,9 +8,8 @@ ion-content {
     width: 80%;
     margin: 25px auto;
   }
-  ion-list {
-    ion-item {
-      height: 70px;
-    }
-  }
+}
+
+.early-alert {
+  font-size: 12px;
 }
