--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -80,7 +80,7 @@
       </ion-radio-group>
 
       <ion-item>
-        <ion-label>Song Status</ion-label>
+        <ion-label position="stacked">Song Status</ion-label>
         <ion-select
           name="creative_status"
           #creative_status
@@ -97,7 +97,9 @@
       </ion-item>
 
       <ion-item>
-        <ion-label>Song Name <ion-text color="danger">*</ion-text></ion-label>
+        <ion-label position="stacked"
+          >Song Name <ion-text color="danger">*</ion-text></ion-label
+        >
         <ion-input
           type="text"
           name="song_title"
@@ -116,7 +118,9 @@
       </ion-item>
 
       <ion-item>
-        <ion-label>Artist Name <ion-text color="danger">*</ion-text></ion-label>
+        <ion-label position="stacked"
+          >Artist Name <ion-text color="danger">*</ion-text></ion-label
+        >
         <ion-input
           type="text"
           #artist_name
@@ -135,7 +139,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label>Genres</ion-label>
+        <ion-label position="stacked">Genres</ion-label>
         <ion-select name="genres" #genres placeholder="Select Genres" multiple>
           <ion-select-option *ngFor="let g of ctx_genres" [value]="g.id"
             >{{g.name}}</ion-select-option
@@ -144,7 +148,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label>Instruments</ion-label>
+        <ion-label position="stacked">Instruments</ion-label>
         <ion-select
           name="instruments"
           #instruments
@@ -158,7 +162,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label>Moods</ion-label>
+        <ion-label position="stacked">Moods</ion-label>
         <ion-select name="moods" #moods placeholder="Select Moods" multiple>
           <ion-select-option *ngFor="let g of ctx_moods" [value]="g.id"
             >{{g.name}}</ion-select-option
